# sonora-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  main.rs.bak  messages.rs
src/commands/: fun.rs  generic.rs  mod.rs
src/utils/: mod.rs  reminder.rs
